add more user docs
